<?xml version="1.0"?>
<package format="2">
  <name>hik_calibration</name>
  <version>0.0.0</version>
  <description>此包用于拍摄相机标定板的照片,对hik相机进行内参和畸变矩阵测定</description>

  <maintainer email="h1r0@todo.todo">h1r0</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
